log4shell-app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-demo
  labels:
    name: ml-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-science
  labels:
    name: data-science
---
apiVersion: v1
kind: Namespace
metadata:
  name: operations
  labels:
    name: operations
---
