log4shell-app/deployment.yml

# Deployment named "log4shell-app"
# Listens on :8080
# Vulnerable to log4shell
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell-app
  namespace: ml-demo
  labels:
    app: log4shell-app
spec:
  replicas: 3
  selector:
    matchLabels:
       app: log4shell-app
  template:
    metadata:
     labels:
       app: log4shell-app
    spec:
      containers:
      - image: quay.io/mfoster/log4shell-demo:0.1.0
        imagePullPolicy: Always
        name: log4shell-app
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell-app
  namespace: data-science
  labels:
    app: log4shell-app
spec:
  replicas: 3
  selector:
    matchLabels:
       app: log4shell-app
  template:
    metadata:
     labels:
       app: log4shell-app
    spec:
      containers:
      - image: quay.io/mfoster/log4shell-demo:0.1.0
        imagePullPolicy: Always
        name: log4shell-app
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log4shell-app
  namespace: data-science
  labels:
    app: log4shell-app
spec:
  replicas: 3
  selector:
    matchLabels:
       app: log4shell-app
  template:
    metadata:
     labels:
       app: log4shell-app
    spec:
      containers:
      - image: quay.io/mfoster/log4shell-demo:0.1.0
        imagePullPolicy: Always
        name: log4shell-app
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          privileged: true
